# n404-error-handler-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  n404-error-handler.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  config.lua  features.lua  n404-error-handler.rockspec  n404-error-handler_sdk.lua  n404-error-handler_types.lua
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  n404errorhandler_sdk.py  n404errorhandler_types.py  pyproject.toml
py/core/: context.py  helpers.py
py/entity/: error_handling_entity.py
py/feature/: audit_feature.py  clienttrack_feature.py  idempotency_feature.py  log_feature.py  metrics_feature.py  netsim_feature.py  ratelimit_feature.py  rbac_feature.py  retry_feature.py  streaming_feature.py  test_feature.py  timeout_feature.py
py/test/: feature_harness.py  runner.py  test_error_handling_direct.py  test_error_handling_entity.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  done.py  feature_init.py  make_error.py  make_options.py  make_point.py  make_request.py  make_response.py  make_spec.py  param.py  prepare_auth.py  prepare_body.py  prepare_params.py  prepare_path.py  prepare_query.py  register.py  transform_request.py
(+422 files in other folders)
